# Hash-Checker

./: .gitignore  .prettierignore  .prettierrc  .prettierrc.json  README.md  README_EN.md  app.go  go.mod  go.sum  index.html  index.js  main.go  manifest.json  manifest.webmanifest  package-lock.json  package.json  pnpm-lock.yaml  preload.js  pwa-assets.config.ts  renovate.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wails.json  webapp.html  webpack.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_macOS.yml  build_windows.yml  deploy.yml  store.yml  testbuil.yml
.tauri/: super-hash.key.pub
cryptojs/: crypto-js.js
frontend/: index.html  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.ts
frontend/src/: global.d.ts  index.css  index.ts  pwa.ts
js/: app.js  checkupdate.js  getfilehash.js  lang.js  link.js  renderer.js  service-worker.js  sw.js
js/lang/: str_en.properties  str_zh.properties
script/: clean.js  package.js  start.js
src/: App.vue  calc.js  constants.ts  date.js  file.js  global.d.ts  index.css  index.js  index.ts  interfaces.ts  main.ts  sw.ts  transfer.js  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/icons/: icon.icns
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/assets/: base.css  main.css
src/components/: HashTopBar.vue  PWABadge.vue  TopAppBar.vue
src/constant/: constants.ts
src/cookie/: cookie.js
src/file/: FileItem.ts  file.js  hash-worker.ts  hash.ts
src/interfaces/: Algorithms.ts  DownloadingStatus.ts  FileStatus.ts  GitHubRelease.ts  Language.ts  Modes.ts  OpenSourceLibrary.ts  WorkerMessage.ts  WorkerResults.ts  constants.ts
src/locales/: en-US.json  zh-CN.json
src/pwa/: pwa.ts  sw.ts
src/store/: localstorage.ts  store.js
src/stores/: drawer.ts
src/utils/: LogHelper.ts  calc.js  clipboard.ts  date.js  date.ts  dialog.js  file.ts  notification.js  notification.ts  (+5 more)
(+68 files in other folders)
