
[package]
name = "super-hash"
version = "3.0.0"
description = "一个快速、随时可用，且遵循 Material Design 3 的跨平台文件校验器"
authors = ["Super12138"]
edition = "2024"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "super_hash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tauri-plugin-notification = "2.3.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化
lto = true        # 启用链接时优化
opt-level = "s"   # 平衡应用大小和性能
strip = true      # 移除调试符号
